@@ -1,3 +1,7 @@
+219
+
+- Report errors thrown from Guice modules during bootstraping together with errors from config validator.
+
 218
 
 - Add method add(value, count) to the DistributionStat.
